[package]
name = "vcweb"
version = "0.1.0"
authors = ["Hans-Christian Esperer <hc@hcesperer.org>"]
edition = "2018"
license = "MIT"

[profile.release]
lto = true

[lib]
crate-type = [ "cdylib", "lib" ]
name = "vcweb"
path = "src/lib.rs"

[dependencies]
vercettus = { path=".." }

serde = "*"
serde_yaml = "*"
stdweb = "*"
wasm-bindgen = "*"
